--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="preconectar" href="https://fonts.googleapis.com">
   <link rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https: //fonts.googleapis.com/css2? family= Bebas+Neue & family= 
-    Lato:ital,wght@0,300;0,400;1,300;1,400 & family= Lora:ital,wght@1,400;1,600;1,700 
-    & family= Montserrat: ital,wght@0,400;0,600;1,700 & family= Nuosu+SIL &familia= 
-    Fuente+Sans+Pro:ital,wght@0,300;0,400;1,400 & display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,
+  wght@0,300;1,400;1,500&family=Bebas+Neue&family=Lato:ital,wght@0,300;0,400;1,300;1,
+  400&family=Lora:ital,wght@1,400;1,600;1,700&family=Montserrat:ital,wght@0,400;0,600;1,
+  700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
+  400&display=swap" rel="stylesheet">
   <title>Radius</title>
 </head>
 
