modificacion en bg y fontfamily

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
   </header>
   <main>
-    <div class="boton">
-      <a href="https://wa.me/5493489624038" target="_blank" class="col-12 redes"><i class="bi bi-whatsapp"></i></a>
+    <section class="container">
+    <div class="row">
+      <a href="https://wa.me/5493489624038" target="_blank" class=
+      "col-12 redes"><i class="bi bi-whatsapp"></i></a>
     </div>
-
+  </section>
     <section class="container-fluid text-center portada">
       <div class="row">
         <h1 class="col-12 display-4  portada-h1">Diagnóstico por imágenes</h1>
@@ -93,10 +95,10 @@
 
     </main>
 
-    <footer class="container text-center">
+    <footer class="container-fluid text-center">
       <div class="row eslogan">
-        <p class="col-12 fs-4 mb-0">Diagnóstico por Imágenes.</p>
-        <p class="col-12 fs-4 mt-0">Excelencia médica.</p>
+        <p class="col-12 fs-4">Diagnóstico por Imágenes.</p>
+        <p class="col-12 fs-4">Excelencia médica.</p>
       </div>
       <div class="row dweb">
         <p class="col-12 fs-5 mb-0"> Desarrollo by The Blue Team.</p>
