modificaciones de color y fuente

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,13 +43,16 @@
 
   </header>
   <main>
-    <div class="boton">
-      <a href="https://wa.me/5493489624038" target="_blank" class="redes"><i class="bi bi-whatsapp"></i></a>
-    </div>
-
+    <section class="container">
+      <div class="row boton">
+        <a href="https://wa.me/5493489624038" target="_blank" class=
+        "col-12 redes"><i class="bi bi-whatsapp"></i></a>
+      </div>
+    </section>
+    <div class="container-fluid">
     <h1 class="h1 mb-5 bg-white text-center">Formulario de contacto</h1>
     <p class="fs-5 text-center mt-5 mb-5">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
-
+  </div>
     <div class="container">
       <form class="row bg-white border mt-5 mb-5 g-3">
 
@@ -92,16 +95,16 @@
       <div class="row">
 
         <div class="col-12 text-center col-lg-6 text-lg-start">
-          <h2 class="display-6">Información de contacto</h2>
-          <p class="fs-6 info">También podes contactarnos por los siguientes canales de atención:</p>
-          <ul class="fs-6 info">
+          <h2 class="display-6 info3">Información de contacto</h2>
+          <p class="fs-5 info">También podes contactarnos por los siguientes canales de atención:</p>
+          <ul class="fs-5 info2">
             <li>Dirección: Beruti 294</li>
             <li>Teléfono: 03489 427153</li>
             <li>WhatsApp: +54 9 3489455046</li>
             <li>E mail: radiussa@gmail.com</li>
           </ul>
-          <h2 class="display-6">Horarios de atención</h2>
-          <p class="fs-6 info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
+          <h2 class="display-6 info3">Horarios de atención</h2>
+          <p class="fs-5 info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
         </div>
         <div class="col-12 text-center col-lg-6 text-lg-center">
           <img src="../imagenes/foto 4.jpg" alt="frente radius" class="img-fluid img-thumbnail">
@@ -111,7 +114,7 @@
     </section>
 
   </main>
-  <footer class="container text-center">
+  <footer class="container-fluid text-center">
     <div class="row eslogan">
       <p class="col-12 fs-4 mb-0">Diagnóstico por Imágenes.</p>
       <p class="col-12 fs-4 mt-0">Excelencia médica.</p>
