--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="container-fluid">
     <nav class="navbar navbar-expand-lg border-bottom navbar-dark bg-dark">
       <div class="container fluid">
-        <a href="#" class="navbar-brand text-black">Radius</a>
+        <a href="#" class="navbar-brand">Radius</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -42,7 +42,7 @@
   </header>
   <main>
     <section class="container">
-    <div class="row">
+    <div class="row boton">
       <a href="https://wa.me/5493489624038" target="_blank" class=
       "col-12 redes"><i class="bi bi-whatsapp"></i></a>
     </div>
