--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -42,53 +42,60 @@
         </nav>
 
     </header>
-    <main class="container-fluid text-center">
-        <h1 class="h1 mb-5 bg-white">Estudios médicos</h1>
-        <section class="row">
-            <h2 class="display-6">Radiología Digital</h2>
-            <ul class="estudios">
-                <li>Radiografia general</li>
-            </ul>
-            <h2 class="display-6">Ecografia General</h2>
-            <ul class="estudios">
-                <li>Ecografia de abdomen</li>
-                <li>Ecografía renal</li>
-                <li>Ecografía vesical/vesicoprostática</li>
-                <li>Ecografia testicular</li>
-                <li>Ecografia de tiroides</li>
-                <li>Ecografia ginecologica/obstetrica/TV</li>
-                <li>Ecografia de partes blandas</li>
-                <li>Ecografia de caderas</li>
-                <li>Ecografia de parótidas</li>
-                <li>Ecografía cerebral</li>
-            </ul>
+    <main>
+        <section class="container">
+            <div class="row boton">
+                <a href="https://wa.me/5493489624038" target="_blank" class="col-12 redes"><i
+                        class="bi bi-whatsapp"></i></a>
+            </div>
+        </section>
+        <section class="container-fluid text-center">
+            <h1 class="h1 mb-5 bg-white">Estudios médicos</h1>
+            <div class="row">
+                <h2 class="display-6">Radiología Digital</h2>
+                <ul class="estudios">
+                    <li>Radiografia general</li>
+                </ul>
+                <h2 class="display-6">Ecografia General</h2>
+                <ul class="estudios">
+                    <li>Ecografia de abdomen</li>
+                    <li>Ecografía renal</li>
+                    <li>Ecografía vesical/vesicoprostática</li>
+                    <li>Ecografia testicular</li>
+                    <li>Ecografia de tiroides</li>
+                    <li>Ecografia ginecologica/obstetrica/TV</li>
+                    <li>Ecografia de partes blandas</li>
+                    <li>Ecografia de caderas</li>
+                    <li>Ecografia de parótidas</li>
+                    <li>Ecografía cerebral</li>
+                </ul>
 
-            <h2 class="display-6">Eco Doppler color</h2>
-            <ul class="estudios">
-                <li>Doppler venoso/arterial de MMII/MMSS</li>
-                <li>Doppler de carótidas</li>
-                <li>Doppler de partes blandas</li>
-                <li>Doppler tiroideo</li>
-                <li>Doppler testicular</li>
-                <li>Doppler obstetrico</li>
-                <li>Scan fetal</li>
-            </ul>
+                <h2 class="display-6">Eco Doppler color</h2>
+                <ul class="estudios">
+                    <li>Doppler venoso/arterial de MMII/MMSS</li>
+                    <li>Doppler de carótidas</li>
+                    <li>Doppler de partes blandas</li>
+                    <li>Doppler tiroideo</li>
+                    <li>Doppler testicular</li>
+                    <li>Doppler obstetrico</li>
+                    <li>Scan fetal</li>
+                </ul>
 
-            <h2 class="display-6">Estudios mamarios</h2>
-            <ul class="estudios">
-                <li>Ecografia mamaria</li>
-                <li>Mamografia digital</li>
-                <li>Doppler mamario</li>
-                <li>Técnica de magnificación</li>
-                <li>Técnica de Eklund</li>
-                <li>Punción mamaria (CORE biopsy)</li>
-                <li>Punción mamaria (PAAF)</li>
-                <li>Marcación mamaria prequirúrgica con carbón</li>
-            </ul>
-
+                <h2 class="display-6">Estudios mamarios</h2>
+                <ul class="estudios">
+                    <li>Ecografia mamaria</li>
+                    <li>Mamografia digital</li>
+                    <li>Doppler mamario</li>
+                    <li>Técnica de magnificación</li>
+                    <li>Técnica de Eklund</li>
+                    <li>Punción mamaria (CORE biopsy)</li>
+                    <li>Punción mamaria (PAAF)</li>
+                    <li>Marcación mamaria prequirúrgica con carbón</li>
+                </ul>
+            </div>
         </section>
     </main>
-    <footer class="container text-center">
+    <footer class="container-fluid text-center">
         <div class="row eslogan">
             <p class="col-12 fs-4 mb-0">Diagnóstico por Imágenes.</p>
             <p class="col-12 fs-4 mt-0">Excelencia médica.</p>
