arregle enlace a estudios medicos desde index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="navbar-nav ms-3">
             <li class="nav-item"><a href="./index.html" class="nav-link" class="menu">Home</a></li>
             <li class="nav-item"><a href="./pages/staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
-            <li class="nav-item"><a href="./pages/estudiosmedicos.html" class="nav-link" class="menu">Estudios
+            <li class="nav-item"><a href="./pages/estudios.html" class="nav-link" class="menu">Estudios
                 Médicos</a>
             </li>
             <li class="nav-item"><a href="./pages/cobertura.html" class="nav-link" class="menu">Cobertura Médica</a>
