--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <header class="container-fluid">
-    <nav class="navbar navbar-expand-lg border-bottom navbar-dark bg-dark">
+  <header class="header container-fluid">
+    <nav class="navbar navbar-expand-lg fs-4">
       <div class="container fluid">
         <a href="#" class="navbar-brand">Radius</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
@@ -83,12 +83,12 @@
 
         <div class="col-12 col-lg-6">
           <h3 class="display-6">Información de contacto</h3>
-          <ul class="text-lg-start informacion-index">
-            <li class="fs-5">Dirección: Beruti 294</li>
-            <li class="fs-5">Teléfono: 03489 427153</li>
-            <li class="fs-5">WhatsApp: +54 9 3489455046</li>
-            <li class="fs-5">E mail: radiussa@gmail.com</li>
-            <li class="fs-5">Horarios de Atención: Lunes a viernes de 8 a 19 hs.</li>
+          <ul class="list-unstyled p-3 fs-5 informacion-index">
+            <li>Dirección: Beruti 294</li>
+            <li>Teléfono: 03489 427153</li>
+            <li>WhatsApp: +54 9 3489455046</li>
+            <li>E mail: radiussa@gmail.com</li>
+            <li>Horarios de Atención: Lunes a viernes de 8 a 19 hs.</li>
           </ul>
         </div>
     </section>
@@ -97,12 +97,12 @@
 
     <footer class="container-fluid text-center">
       <div class="row eslogan">
-        <p class="col-12 fs-4">Diagnóstico por Imágenes.</p>
-        <p class="col-12 fs-4">Excelencia médica.</p>
+        <p class="col-12 fs-4 fw-bold">Diagnóstico por Imágenes.</p>
+        <p class="col-12 fs-4 fw-bold">Excelencia médica.</p>
       </div>
       <div class="row dweb">
-        <p class="col-12 fs-5 mb-0"> Desarrollo by The Blue Team.</p>
-        <p class="col-12 fs-5 mt-0">Todos los derechos reservados.</p>
+        <p class="col-12 fs-5 mb-0 fst-italic"> Desarrollo by The Blue Team.</p>
+        <p class="col-12 fs-5 mt-0 fst-italic">Todos los derechos reservados.</p>
       </div>
     </footer>
 
