--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-    <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg border-bottom navbar-dark bg-dark">
+    <header class="header container-fluid">
+        <nav class="navbar navbar-expand-lg fs-4">
             <div class="container fluid">
                 <a href="#" class="navbar-brand">Radius</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
