--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   400&family=Lora:ital,wght@1,400;1,600;1,700&family=Montserrat:ital,wght@0,400;0,600;1,
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <title>Radius</title>
 </head>
 
 <body>
   <header class="header container-fluid">
-    <nav class="navbar navbar-expand-lg fs-4">
+    <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
         <a href="#" class="navbar-brand">Radius</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-3">
-            <li class="nav-item"><a href="./index.html" class="nav-link" class="menu">Home</a></li>
-            <li class="nav-item"><a href="./pages/staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
-            <li class="nav-item"><a href="./pages/estudios.html" class="nav-link" class="menu">Estudios
-                Médicos</a>
+            <li class="nav-item menu"><a href="./index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="./pages/staffmedico.html" class="nav-link">Staff Médico</a></li>
+            <li class="nav-item"><a href="./pages/estudios.html" class="nav-link">EstudiosMédicos</a>
             </li>
-            <li class="nav-item"><a href="./pages/cobertura.html" class="nav-link" class="menu">Cobertura Médica</a>
+            <li class="nav-item"><a href="./pages/cobertura.html" class="nav-link">Cobertura Médica</a>
             </li>
-            <li class="nav-item"><a href="./pages/contacto.html" class="nav-link" class="menu">Contacto</a></li>
+            <li class="nav-item"><a href="./pages/contacto.html" class="nav-link">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -42,25 +42,24 @@
   </header>
   <main>
     <section class="container">
-      <div class="row boton">
-      <a href="https://wa.me/5493489624038" target="_blank" class=
-      "redes col-12"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-      </svg></a>
+      <div class="row">
+        <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
+          <i class="fa fa-whatsapp mi-boton"></i>
+          </a>
     </div>
 
   </section>
     <section class="container-fluid text-center portada">
       <div class="row">
-        <h1 class="col-12 display-4  portada-h1">Diagnóstico por imágenes</h1>
-        <p class="col-12 display-6 portada-p">Calidad y excelencia médica</p>
+        <h1 class="col-12 portada-h1">Diagnóstico por imágenes</h1>
+        <p class="col-12 portada-p">Calidad y excelencia médica</p>
       </div>
     </section>
 
     <section class="container text-center institucional">
       <div class="row">
-        <h2 class="col-12 display-5">Institucional</h2>
-        <p class="col-12 fs-5">
+        <h2 class="col-12">Institucional</h2>
+        <p class="col-12">
           Desde 1999 hemos cimentado las bases para brindar el mejor
           servicio de diagnóstico
           por imágenes de la zona. Contamos con profesionales de alto renombre, altamente preparados en el área
@@ -76,17 +75,17 @@
 
       <div class="row">
         <div class="col-12 col-lg-6">
-          <h3 class="display-6">Ubicación</h3>
+          <h3 class="ubicacion-titulo">Ubicación</h3>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.4016707189667!2d-58.
       96685248506748!3d-34.16164674174783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb724a90b0
       2a5f%3A0xd18e055c7200a506!2sBeruti%20294%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!
       1ses!2sar!4v1654371668489!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen=""
-            loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mimapa" class="d-block mx-auto mapa"></iframe>
+            loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mimapa" class="d-block mx-auto ubicacion-mapa"></iframe>
         </div>
 
-        <div class="col-12 col-lg-6">
-          <h3 class="display-6">Información de contacto</h3>
-          <ul class="list-unstyled p-3 fs-5 informacion-index">
+        <div class="col-12 col-lg-6 text-lg-start">
+          <h3 class="infoh3">Información de contacto</h3>
+          <ul class="informacion-index">
             <li>Dirección: Beruti 294</li>
             <li>Teléfono: 03489 427153</li>
             <li>WhatsApp: +54 9 3489455046</li>
@@ -100,12 +99,12 @@
 
     <footer class="container-fluid text-center">
       <div class="row eslogan">
-        <p class="col-12 fs-4 fw-bold">Diagnóstico por Imágenes.</p>
-        <p class="col-12 fs-4 fw-bold">Excelencia médica.</p>
+        <p class="col-12">Diagnóstico por Imágenes.</p>
+        <p class="col-12">Excelencia médica.</p>
       </div>
       <div class="row dweb">
-        <p class="col-12 fs-5 mb-0 fst-italic"> Desarrollo by The Blue Team.</p>
-        <p class="col-12 fs-5 mt-0 fst-italic">Todos los derechos reservados.</p>
+        <p class="col-12"> Desarrollo by The Blue Team.</p>
+        <p class="col-12">Todos los derechos reservados.</p>
       </div>
     </footer>
 
