modificacion en contenido de staff, agregue animaciones y media queries

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </section>
     <section class="container-fluid text-center portada">
       <div class="row">
-        <h1 class="col-12 portada-h1">Diagnóstico por imágenes</h1>
+        <h1 class="col-12 portada-h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
         <p class="col-12 portada-p">Calidad y excelencia médica</p>
       </div>
     </section>
