--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -51,7 +51,8 @@
     <section class="container-fluid text-center">
 
       <h1>Cobertura médica</h1>
-      <ul class="prepagas">
+      <div class="row">
+      <ul class="col-12 col-lg-6 lista">
         <li>Accord Salud</li>
         <li>Amffa</li>
         <li>APM (Agente de propaganda médica)</li>
@@ -62,6 +63,8 @@
         <li>Colegio de escribanos (provincia)</li>
         <li>COMEI</li>
         <li>Dasmi</li>
+      </ul>
+      <ul class="col-12 col-lg-6 lista">
         <li>Dasuten</li>
         <li>Federada Salud</li>
         <li>Galeno</li>
@@ -73,6 +76,7 @@
         <li>Osdipp</li>
         <li>Swiss Medical</li>
       </ul>
+    </div>
     </section>
   </main>
   <footer class="container-fluid text-center">
