--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,6 +14,7 @@
   400&family=Lora:ital,wght@1,400;1,600;1,700&family=Montserrat:ital,wght@0,400;0,600;1,
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <title>Radius</title>
 </head>
@@ -52,12 +53,12 @@
     </div>
 
   </section>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
     <h1>Formulario de contacto</h1>
-    <p class="fs-5 text-center mt-5 mb-5">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
+    <p class="form-p">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
   </div>
     <div class="container">
-      <form class="row bg-white border mt-5 mb-5 g-3">
+      <form class="row form g-3">
 
         <div class="col-6">
           <label for="campo-nombre" class="form-label">Nombre y Apellido:</label>
@@ -86,8 +87,8 @@
           <textarea name="id" cols="30" rows="10" class="form-control"></textarea>
         </div>
         <div class="col-6">
-          <button type="submit" value="enviar" class="btn btn-primary">Enviar</button>
-          <button type="reset" value="restablecer" class="btn btn-primary">Restablecer</button>
+          <button type="submit" value="enviar" class="btn">Enviar</button>
+          <button type="reset" value="restablecer" class="btn">Restablecer</button>
 
         </div>
     </div>
