--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -49,51 +49,59 @@
          <div class="container-fluid text-center">
           <h1>Staff Médico</h1>
           
-          <div class="container">
+          <div class="container staff">
           <dl class="row">
-            <div class="col-12 text-center col-lg-6 text-lg-start">
+            <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name fs-3" class="col-12">Dra. Maria Alejandra Stamponi</strong>
+              <strong class="staffmedico-name" class="col-12">Dra. Maria Alejandra Stamponi</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p fs-5" class="col-12">Médica especialista en diagnóstico mamario por imágenes</p>
+              <p class="staffmedico-p" class="col-12">Médica especialista en diagnóstico mamario por imágenes</p>
             <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail foto">
             </dd>
           </div>
-          <div class="col-12 text-center col-lg-6 text-lg-start">
+          <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name fs-3" class="col-12">Dr. Jorge Luis Verhaz</strong>
+              <strong class="staffmedico-name" class="col-12">Dr. Jorge Luis Verhaz</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p fs-5" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail text-center foto">
+              <p class="staffmedico-p" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
+              <img src="../imagenes/ale.jpeg" alt="doctor" class="img-thumbnail text-center foto">
             </dd>
           </div>
-          <div class="col-12 text-center col-lg-6 text-lg-start">
+          <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name fs-3" class="col-12">Dr. Lucas Jose Chomont</strong>
+              <strong class="staffmedico-name" class="col-12">Dr. Lucas Jose Chomont</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p fs-5" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail text-center foto">
+              <p class="staffmedico-p" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
+              <img src="../imagenes/ale.jpeg" alt="doctor" class="img-thumbnail text-center foto">
             </dd>
           </div>
-          <div class="col-12 text-center col-lg-6 text-lg-start">
+
+          <h2 class="especialidades-titulo">Especialidades</h2>
+          <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name fs-3" class="col-12">Dr. Suarez Claudio Augusto</strong>
+              <p class="staffmedico-p" class="col-12">Traumatología infantil.</p>
             </dt>
             <dd>
-              <p class="staffmedico-p fs-5" class="col-12">Traumatólogo y psiquiatra infantil.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail text-center foto">
+              <strong class="staffmedico-name" class="col-12">Dr. Suarez Claudio Augusto</strong>
             </dd>
           </div>
-          <div class="col-12 text-center">
+            <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name fs-3" class="col-12">Dra. Carla Guscelli</strong>
+              <p class="staffmedico-p" class="col-12">Psiquiatría infanto/juvenil</p>
             </dt>
             <dd>
-              <p class="staffmedico-p fs-5" class="col-12">Médica mastóloga.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail text-center foto">
+              <strong class="staffmedico-name" class="col-12">Dr. Suarez Claudio Augusto</strong>
+            </dd>
+          </div>
+          <div class="col-12 text-center col-lg-4">
+            <dt>
+              <p class="staffmedico-p" class="col-12">Mastología.</p>
+            </dt>
+            <dd>
+              <strong class="staffmedico-name" class="col-12">Dra. Carla Guscelli</strong>
             </dd>
           </div>
           </dl>
