--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -54,13 +54,16 @@
         </section>
         <section class="container-fluid text-center">
             <h1>Estudios médicos</h1>
-            <div class="row">
-                <h2 class="display-6">Radiología Digital</h2>
-                <ul class="estudios">
+            <div class="row estudios">
+                <div class="col-12 col-lg-3 text-lg-start">
+                <h2 class="titulo-h2">Radiología Digital</h2>
+                <ul class="estudios-ul">
                     <li>Radiografia general</li>
                 </ul>
-                <h2 class="display-6">Ecografia General</h2>
-                <ul class="estudios">
+            </div>
+            <div class="col-12 col-lg-3 text-lg-start">
+                <h2 class="titulo-h2">Ecografia General</h2>
+                <ul class="estudios-ul">
                     <li>Ecografia de abdomen</li>
                     <li>Ecografía renal</li>
                     <li>Ecografía vesical/vesicoprostática</li>
@@ -72,9 +75,10 @@
                     <li>Ecografia de parótidas</li>
                     <li>Ecografía cerebral</li>
                 </ul>
-
-                <h2 class="display-6">Eco Doppler color</h2>
-                <ul class="estudios">
+            </div>
+            <div class="col-12 col-lg-3 text-lg-start">
+                <h2 class="titulo-h2">Eco Doppler color</h2>
+                <ul class="estudios-ul">
                     <li>Doppler venoso/arterial de MMII/MMSS</li>
                     <li>Doppler de carótidas</li>
                     <li>Doppler de partes blandas</li>
@@ -83,9 +87,10 @@
                     <li>Doppler obstetrico</li>
                     <li>Scan fetal</li>
                 </ul>
-
-                <h2 class="display-6">Estudios mamarios</h2>
-                <ul class="estudios">
+            </div>
+            <div class="col-12 col-lg-3 text-lg-start">
+                <h2 class="titulo-h2">Estudios mamarios</h2>
+                <ul class="estudios-ul">
                     <li>Ecografia mamaria</li>
                     <li>Mamografia digital</li>
                     <li>Doppler mamario</li>
@@ -96,16 +101,17 @@
                     <li>Marcación mamaria prequirúrgica con carbón</li>
                 </ul>
             </div>
+            </div>
         </section>
     </main>
     <footer class="container-fluid text-center">
         <div class="row eslogan">
-            <p class="col-12 fs-4 mb-0">Diagnóstico por Imágenes.</p>
-            <p class="col-12 fs-4 mt-0">Excelencia médica.</p>
+            <p class="col-12">Diagnóstico por Imágenes.</p>
+            <p class="col-12">Excelencia médica.</p>
         </div>
         <div class="row dweb">
-            <p class="col-12 fs-5 mb-0 fst-italic"> Desarrollo by The Blue Team.</p>
-            <p class="col-12 fs-5 mt-0 fst-italic">Todos los derechos reservados.</p>
+            <p class="col-12"> Desarrollo by The Blue Team.</p>
+            <p class="col-12">Todos los derechos reservados.</p>
         </div>
     </footer>
 
