reordené css y resolvi problemas de linkeo

--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -28,11 +28,11 @@
         <div id="menu" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-3">
             <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
-            <li class="nav-item"><a href="/pages/staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
-            <li class="nav-item"><a href="/pages/estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
+            <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
+            <li class="nav-item"><a href="./estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
             </li>
-            <li class="nav-item"><a href="/pages/cobertura.html" class="nav-link" class="menu">Cobertura Médica</a></li>
-            <li class="nav-item"><a href="/pages/contacto.html" class="nav-link" class="menu">Contacto</a></li>
+            <li class="nav-item"><a href="./cobertura.html" class="nav-link" class="menu">Cobertura Médica</a></li>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link" class="menu">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -52,7 +52,7 @@
 
       <h1>Cobertura médica</h1>
       <div class="row">
-      <ul class="col-12 col-lg-6 lista">
+      <ul class="col-12 col-lg-4 lista">
         <li>Accord Salud</li>
         <li>Amffa</li>
         <li>APM (Agente de propaganda médica)</li>
@@ -62,18 +62,24 @@
         <li>Cobertec</li>
         <li>Colegio de escribanos (provincia)</li>
         <li>COMEI</li>
-        <li>Dasmi</li>
       </ul>
-      <ul class="col-12 col-lg-6 lista">
+      <ul class="col-12 col-lg-4 lista">
+       
+        <li>Dasmi</li>
         <li>Dasuten</li>
         <li>Federada Salud</li>
         <li>Galeno</li>
         <li>Jerarquicos Salud</li>
         <li>Medife</li>
         <li>Medicus</li>
+      </ul>
+        <ul class="col-12 col-lg-4 lista">
         <li>Omint</li>
         <li>Osde</li>
         <li>Osdipp</li>
+        <li>Patrones de Cabotaje</li>
+        <li>Prevencion Salud</li>
+        <li>Sancor Salud</li>
         <li>Swiss Medical</li>
       </ul>
     </div>
