--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,14 +29,14 @@
         <div id="menu" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-3">
             <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="/pages/staffmedico.html" class="nav-link">Staff
+            <li class="nav-item"><a href="./staffmedico.html" class="nav-link">Staff
                 Médico</a></li>
-            <li class="nav-item"><a href="/pages/estudios.html" class="nav-link">Estudios
+            <li class="nav-item"><a href="./estudios.html" class="nav-link">Estudios
                 Médicos</a>
             </li>
-            <li class="nav-item"><a href="/pages/cobertura.html" class="nav-link">Cobertura
+            <li class="nav-item"><a href="./cobertura.html" class="nav-link">Cobertura
                 Médica</a></li>
-            <li class="nav-item"><a href="/pages/contacto.html" class="nav-link">Contacto</a>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link">Contacto</a>
             </li>
           </ul>
         </div>
@@ -99,16 +99,16 @@
       <div class="row">
 
         <div class="col-12 text-center col-lg-6 text-lg-start">
-          <h2 class="display-6 info3">Información de contacto</h2>
-          <p class="fs-5 info">También podes contactarnos por los siguientes canales de atención:</p>
-          <ul class="fs-5 info2">
+          <h2 class="info3">Información de contacto</h2>
+          <p class="info">También podes contactarnos por los siguientes canales de atención:</p>
+          <ul class="info2">
             <li>Dirección: Beruti 294</li>
             <li>Teléfono: 03489 427153</li>
             <li>WhatsApp: +54 9 3489455046</li>
             <li>E mail: radiussa@gmail.com</li>
           </ul>
-          <h2 class="display-6 info3">Horarios de atención</h2>
-          <p class="fs-5 info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
+          <h2 class="info3">Horarios de atención</h2>
+          <p class="info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
         </div>
         <div class="col-12 text-center col-lg-6 text-lg-center">
           <img src="../imagenes/foto 4.jpg" alt="frente radius" class="img-fluid img-thumbnail">
