--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -28,14 +28,14 @@
                 <div id="menu" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-3">
                         <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
-                        <li class="nav-item"><a href="/pages/staffmedico.html" class="nav-link" class="menu">Staff
+                        <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff
                                 Médico</a></li>
-                        <li class="nav-item"><a href="/pages/estudios.html" class="nav-link" class="menu">Estudios
+                        <li class="nav-item"><a href="./estudios.html" class="nav-link" class="menu">Estudios
                                 Médicos</a>
                         </li>
-                        <li class="nav-item"><a href="/pages/cobertura.html" class="nav-link" class="menu">Cobertura
+                        <li class="nav-item"><a href="./cobertura.html" class="nav-link" class="menu">Cobertura
                                 Médica</a></li>
-                        <li class="nav-item"><a href="/pages/contacto.html" class="nav-link" class="menu">Contacto</a>
+                        <li class="nav-item"><a href="./contacto.html" class="nav-link" class="menu">Contacto</a>
                         </li>
                     </ul>
                 </div>
