--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -26,11 +26,11 @@
                   <div id="menu" class="collapse navbar-collapse">
                       <ul class="navbar-nav ms-3">
                           <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
-                          <li class="nav-item"><a href="/pages/staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
-                          <li class="nav-item"><a href="/pages/estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
+                          <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
+                          <li class="nav-item"><a href="./estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
                           </li>
-                          <li class="nav-item"><a href="/pages/cobertura.html" class="nav-link" class="menu">Cobertura Médica</a></li>
-                          <li class="nav-item"><a href="/pages/contacto.html" class="nav-link" class="menu">Contacto</a></li>
+                          <li class="nav-item"><a href="./cobertura.html" class="nav-link" class="menu">Cobertura Médica</a></li>
+                          <li class="nav-item"><a href="./contacto.html" class="nav-link" class="menu">Contacto</a></li>
                       </ul>
                   </div>
                   </div>
@@ -110,12 +110,12 @@
       </main>
       <footer class="container-fluid text-center">
         <div class="row eslogan">
-          <p class="col-12 fs-4 mb-0">Diagnóstico por Imágenes.</p>
-          <p class="col-12 fs-4 mt-0">Excelencia médica.</p>
+          <p class="col-12">Diagnóstico por Imágenes.</p>
+          <p class="col-12">Excelencia médica.</p>
         </div>
         <div class="row dweb">
-          <p class="col-12 fs-5 mb-0 fst-italic"> Desarrollo by The Blue Team.</p>
-          <p class="col-12 fs-5 mt-0 fst-italic">Todos los derechos reservados.</p>
+          <p class="col-12"> Desarrollo by The Blue Team.</p>
+          <p class="col-12">Todos los derechos reservados.</p>
         </div>
       </footer>
   
