agregue logo nuevamente

--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -20,7 +20,7 @@
         <header class="header container-fluid">
             <nav class="navbar navbar-expand-lg fs-4">
               <div class="container fluid">
-                  <a href="../index.html" alt="logo" class="navbar-brand"> <img src="../logo/logoradius.jpeg" alt="logoempresa" class="logo"></a>
+                  <a href="../index.html" alt="logo" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
                   <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                   <span class="navbar-toggler-icon"></span></button>
                   <div id="menu" class="collapse navbar-collapse">
