agregue pagina de agradecimiento para form

--- a/pages/exito.html
+++ b/pages/exito.html
@@ -18,10 +18,10 @@
   <meta name="description" content="Atendemos por obras sociales y prepagas, atencion paticular y por reintegro">
   <title>Radius | Gracias por tu mensaje</title>
 </head>
-<body>
+<body class="exito">
     
 
-<h1>
+<h1 class="exito__h1">
     Gracias por escribirnos. Responderemos a la brevedad.
 </h1>
 <script>
